Fixed some grammar errors

--- a/lasagna.html
+++ b/lasagna.html
@@ -13,7 +13,7 @@
 
     <h2>Ingredients</h2>
     <ul>
-        <h3><li>For the Meat Sauce:<li></h3>
+        <h3><li>For the Meat Sauce:</li></h3>
             <ul>
                 <li>1 lb (450g) ground beef or Italian sausage</li>
                 <li>1 small onion, finely chopped</li>
@@ -56,7 +56,7 @@
             <li>Bring a large pot of salted water to a boil. Cook the lasagna noodles according to the package instructions. Drain and rinse with cold water to prevent them from sticking. Lay them flat on a sheet of parchment or wax paper to keep them from sticking together.</li>
         </ul>
         <h3><li>Prepare the Cheese Mixture:</li></h3>
-        <ul>In a mixing bowl, combine ricotta cheese, 1 1/2 cups of shredded mozzarella cheese, Parmesan cheese, egg, and parsley. Mix until smooth and well combined.</ul>
+        <ul><li>In a mixing bowl, combine ricotta cheese, 1 1/2 cups of shredded mozzarella cheese, Parmesan cheese, egg, and parsley. Mix until smooth and well combined.</lil></ul>
         <h3><li>Assemble the Lasagna:</li></h3>
         <ul>
             <li>Preheat your oven to 375°F (190°C).</li>
