added 2 more recipes

--- a/lasagna.html
+++ b/lasagna.html
@@ -11,6 +11,8 @@
 
     <h1>Lasagna recipe</h1>
 
+    <img src="img\lasagna.jpg">
+
     <h2>Ingredients</h2>
     <ul>
         <h3><li>For the Meat Sauce:</li></h3>
