--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="lasagna.html">Lasagna</a>
+    <ul>
+      <li><a href="lasagna.html">Lasagna</a></li> 
+      <li><a href="Spaghetti_Carbonara.html">Spaghetti Carbonara</a></li>
+      <li><a href="Chicken_Alfredo.html">Chicken Alfredo</a></li>
+    </ul>
 </body>
 </html>
